Fixed mobile nav overlapping top bar

--- a/src/nav.css
+++ b/src/nav.css
@@ -104,7 +104,7 @@
     .navlinks {
         position: absolute;
         right: 0;
-        top: 60px;
+        top: 4em;
         background-color: rgb(19, 19, 72);
         width: 0px;
         height: calc(100vh - 60px);
